--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -9,7 +9,7 @@
             <a href="/" class="navbar-brand mx-auto">게시판 서비스</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="/author/list" class="nav-link">회원목록</a> </li>
-                <li class="nav-item"><a href="/post/list/pageing" class="nav-link">게시글목록</a> </li>
+                <li class="nav-item"><a href="/post/list/paging" class="nav-link">게시글목록</a> </li>
                 <li class="nav-item"><a href="/author/create" class="nav-link">회원가입</a> </li>
             </ul>
         </nav>
