--- a/src/main/resources/templates/post/post_list.html
+++ b/src/main/resources/templates/post/post_list.html
@@ -19,17 +19,14 @@
           <td th:text="${post.id}"></td>
           <td th:text="${post.title}"></td>
           <td th:text="${post.authorEmail}"></td>
-          <td> <a href="@{/post/detail/{id}(id=${post.id})}">상세조회</a> </td>
+          <td> <a th:href="@{/post/detail/{id}(id=${post.id})}">상세조회</a> </td>
         </tr>
-
       </tbody>
     </table>
     <ul class="pagination justify-content-center">
       <li class="page-item" th:each="pageNum: ${#numbers.sequence(0,postList.totalPages-1)}">
         <a class="page-link" th:href="@{/post/list/paging/(page=${pageNum})}" th:text="${pageNum+1}"></a>
-
       </li>
-
     </ul>
   </div>
 </body>
