--- a/src/main/resources/templates/post/post_create.html
+++ b/src/main/resources/templates/post/post_create.html
@@ -18,6 +18,13 @@
       </div>
       <div class="form-group">작성자 email <input type="email" name="email" class="form-control">
       </div>
+      <div>
+        예약여부
+        <input type="radio" name="appointment" value="Y">YES
+        <input type="radio" name="appointment" value="N" checked>No
+        예약시간
+        <input type="datetime-local" name="appointmentTime">
+      </div>
       <button type="submit" class="btn btn-secondary">글작성 완료</button>
 
     </form>
